--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -31,6 +31,13 @@ body {
     font-size: 1.5rem;
     color: #ffffff;
   }
+
+  main h1 {
+    text-align: center;
+  }
+  main p {
+    text-align: center;
+  }
   
   nav {
     background-color: #097903;
@@ -96,7 +103,7 @@ body {
     nav ul {
       flex-direction: column;
       background-color: #333;
-      position: absolute;
+      /*position: absolute;*/
       width: 100%;
       left: 0;
       top: 140px;
