--- a/chamber/styles/index.css
+++ b/chamber/styles/index.css
@@ -166,3 +166,31 @@ nav ul.active {
       width: calc(50% - 1rem);
     }
   }
+
+
+#weather-forecast {
+  width: 90%;
+    max-width: 300px;
+    margin: 1rem auto;
+    background-color: #dffddc;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 1rem;
+    text-align: center;
+}
+
+#weather-forecast h3 {
+  color: black;
+  margin-bottom: 10px;
+}
+
+#weather-forecast {
+  display: grid;
+  grid-template-columns: 100px auto;
+  grid-template-rows: 50px 100px;
+}
+
+#weather-forecast p {
+  color: black;
+  margin-bottom: 10px;
+}
