--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -92,6 +92,7 @@
     padding-top: 1.5rem;
     color: white;
     font-weight: bold;
+    font-size: 20px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
   }
   
