--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -99,7 +99,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 8px 8px 0 0;
-  /* transition: all 0.3s ease; */
+  transition: all 0.3s ease;
 }
 
 .card-image img {
